package crr.aliexpress;

/*Generated by MPS */

import java.util.List;
import java.util.ArrayList;

public class Item {

  public int Id;
  public String Description;
  public String Name;
  public int Price;
  public final List<Rate> Rates = new ArrayList<Rate>();

  public Item() {
  }

  public Item(int id, String Description, String Name, int Price) {
    Id = id;
    this.Description = Description;
    this.Name = Name;
    this.Price = Price;
  }

  public String toString() {
    String res = "";

    res += "Id: " + Id + ";\n";
    res += "Description" + ": " + Description + ";\n";
    res += "Name" + ": " + Name + ";\n";
    res += "Price" + ": " + Price + ";\n";

    res += "\nComments:\n";

    res += "\nRates:\n";
    for (int i = 0; i < Rates.size(); i++) {
      res += Rates.get(i).toString();
      res += "---------\n";
    }

    return res;
  }
}
