package crr.testmodel;

/*Generated by MPS */


public class Review {
  public int Id;
  public String Content;

  public Review() {
  }

  public String toString() {
    String res = "";
    return res += "" + Content + ";\n";
  }
}
